--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "author": "Kazumi OHIRA <dzeyelid@gmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "@azure/storage-file-datalake": "^12.0.0"
+  },
   "node-red": {
     "nodes": {
       "append-file": "azure-data-lake-storage/append-file.js"
